<resources>
    <string name="app_name">Networks</string>
    <string name="login">Sign in</string>
    <string name="your_password">" "Your password</string>
    <string name="ok">OK</string>
    <string name="how_much">How much ฿</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="sent">Sent</string>
    <string name="your_name">Your name</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="cantrip">Cantrip</string>
    <string name="recent_rates">Recent rates</string>
    <string name="my_events">My events</string>
    <string name="winners">Winners</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="nic_name">Nic name</string>
    <string name="total">Total ฿ </string>
    <string name="bitcoint">฿</string>
    <string name="take_part">Take part</string>
    <string name="statistic">Statistic</string>
    <string name="five_seconds_left">Five seconds left</string>
    <string name="jackpot">Jackpot:</string>
    <string name="add_your_private_key">add your private key</string>
    <string name="add">ADD</string>
    <string name="add_your_email">add your email</string>
</resources>
