<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="93dp"
        android:ems="12"
        android:hint="@string/add_your_email"
        android:background="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSetEmail"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_configure_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:layout_alignTop="@+id/txt_private_key"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/txt_private_key"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="12"
        android:background="@color/colorAccent"
        android:hint="@string/add_your_private_key"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/btnSetEmail"
        android:layout_alignParentStart="true" />

</RelativeLayout>
