<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:ems="14"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/txtUserPassword"
        android:layout_alignStart="@+id/txtUserPassword"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/txtUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:ems="14"
        android:inputType="textPassword"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/btbConfirmRegistration"
        android:layout_alignEnd="@+id/btbConfirmRegistration" />

    <Button
        android:id="@+id/btbConfirmRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:onClick="confirm"
        android:text="@string/confirm"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="54dp" />

    <EditText
        android:id="@+id/txtUserNicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtUserEmail"
        android:layout_alignStart="@+id/txtUserEmail"
        android:layout_marginBottom="11dp"
        android:hint="@string/nic_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignEnd="@+id/txtUserEmail" />

</RelativeLayout>