<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="388dp"
        android:layout_height="656dp">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="154dp"
            android:layout_marginTop="109dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/your_password"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="221dp"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/txtEmail"
            android:layout_alignStart="@+id/btnSignUp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="132dp"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/login"
            android:onClick="login"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="282dp"
            android:layout_marginRight="14dp"
            android:layout_alignBaseline="@+id/btnSignUp"
            android:layout_alignBottom="@+id/btnSignUp"
            android:layout_toEndOf="@+id/btnSignUp"
            android:layout_marginStart="26dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:onClick="registration"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:layout_marginStart="26dp"
            android:layout_below="@+id/txtPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
