<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ether"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnTakePart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:ems="18"
        android:text="@string/take_part"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="63dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtTitleJackpot"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jackpot"
        android:layout_above="@+id/txtJackpot"
        android:layout_alignEnd="@+id/txtJackpot" />

    <TextView
        android:id="@+id/txtTimeLeft"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_seconds_left"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/spnTableGames"
        android:layout_alignEnd="@+id/txtJackpot" />

    <Spinner
        android:id="@+id/spnTableGames"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"

        android:spinnerMode="dialog"
        android:layout_marginBottom="84dp"
        android:layout_alignBottom="@+id/btnTakePart"
        android:layout_alignStart="@+id/btnTakePart"
        android:layout_alignEnd="@+id/btnTakePart" />

    <TextView
        android:id="@+id/txtJackpot"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="365"
        android:layout_above="@+id/txtTimeLeft"
        android:layout_alignEnd="@+id/spnTableGames" />

    <TextView
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="LUCKYETHER"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/txtTitleJackpot" />

</RelativeLayout>